fix: remove custom scrollbar

--- a/src/.vuepress/theme/styles/theme.styl
+++ b/src/.vuepress/theme/styles/theme.styl
@@ -28,21 +28,3 @@
 
 [aria-label][data-balloon-pos]
   cursor help
-
-::-webkit-scrollbar
-  width 6px
-  height 6px
-
-::-webkit-scrollbar-track-piece
-  background rgba(0, 0, 0, 0.1)
-  -webkit-border-radius 6px
-
-::-webkit-scrollbar-thumb:vertical
-  height 6px
-  background var(--accent-color)
-  -webkit-border-radius 6px
-
-::-webkit-scrollbar-thumb:horizontal
-  width 6px
-  background var(--accent-color)
-  -webkit-border-radius 6px
